# CHANGELOG -- JINN
# (C) Richard "Shred" Körber
# $Id: changelog.txt 68 2006-02-02 12:51:43Z shred $

2005-11-14 shred
  * First alpha release. Jinn is functional, but not yet tested.

2005-11-02 shred
  * Birth of changelog

#